[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui_elements/info_seperator/info_dialog/info_dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/info_seperator/info_display/info_display.gd" type="Script" id=2]
[ext_resource path="res://theme/wave.theme" type="Theme" id=3]

[node name="InfoDisplay" type="Node"]
script = ExtResource( 2 )

[node name="Backdrop" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
color = Color( 0, 0, 0, 0.392157 )

[node name="InfoDialog" parent="Backdrop" instance=ExtResource( 1 )]

[connection signal="about_to_show" from="Backdrop/InfoDialog" to="." method="_on_InfoDialog_about_to_show"]
[connection signal="popup_hide" from="Backdrop/InfoDialog" to="." method="_on_InfoDialog_popup_hide"]
